Añadmios endpoints de stores que solo pueden ser consumidos por un admin
