# src/main/java/com/ivanfrias/product_management/exceptions/handler/ExceptionGlobalHandler.java
@@ -1,6 +1,7 @@
 package com.ivanfrias.product_management.exceptions.handler;
 
 import com.ivanfrias.product_management.exceptions.NotFoundException;
+import com.ivanfrias.product_management.exceptions.UnauthorizedException;
 import io.swagger.v3.oas.annotations.Hidden;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -15,6 +16,11 @@ public class ExceptionGlobalHandler {
     @ExceptionHandler(NotFoundException.class)
     public ResponseEntity<?> handlerNotFoundException(NotFoundException ex, WebRequest request) {
         return new ResponseEntity<>(ex.getMessage(), HttpStatus.NOT_FOUND);
+    }
+
+    @ExceptionHandler(UnauthorizedException.class)
+    public ResponseEntity<?> handlerUnauthorizedException(UnauthorizedException ex, WebRequest request) {
+        return new ResponseEntity<>(ex.getMessage(), HttpStatus.FORBIDDEN);
     }
 
     @ExceptionHandler(Exception.class)
